[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/circle.png" type="Texture" id=1]
[ext_resource path="res://UI/HUD/HUDButton.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/Inconsolata/HUDButtonFont.tres" type="DynamicFont" id=3]

[node name="HUDButton" type="Panel"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTextureRect" type="TextureRect" parent="CenterContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 34.0
margin_bottom = 34.0
texture = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemTextureRect" type="TextureRect" parent="CenterContainer/ButtonTextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextLabel" type="Label" parent="CenterContainer/ButtonTextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StockLabel" type="Label" parent="."]
margin_left = -10.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
